compiler/parser/parser.py
"""
A packrat parser for parsing Raccoon's syntax.

Check `compiler/parser/parser.grammar` for the language's parser grammar specification.

GUIDELINES:
    - Add/edit corresponding rule in grammar file if you are adding/editing a parser function.
    - Generally before adding/changing your parser function check if you can resuse the code of
      a similar implementation in the code.
    - AST constructors are called with positional arguments. Don't use named arguments, args or
      kwargs.
    - The `is not None` chack is not needed in a lot of places, but it should be added for
      convention and to prevent ocassional cases where they are needed and might lead to bugs.
"""

from functools import wraps
from compiler.lexer import TokenKind
from compiler import CompilerOptions
from compiler.ast import (
    Null,
    Newline,
    Indent,
    Dedent,
    Identifier,
    Integer,
    Float,
    ImagInteger,
    ImagFloat,
    String,
    ByteString,
    PrefixedString,
    Operator,
    UnaryExpr,
    BinaryExpr,
    IfExpr,
    FuncParam,
    FuncParams,
    Function,
    TupleRestExpr,
    NamedTupleRestExpr,
    Comprehension,
    ComprehensionType,
    Yield,
    Dict,
    Set,
    List,
    SubscriptIndex,
    Subscript,
    Tuple,
    StringList,
    NoneLiteral,
    Bool,
    Argument,
    Field,
    Call,
    AwaitedExpr,
    WithArgument,
    WithStatement,
    Except,
    TryStatement,
    Elif,
    IfStatement,
    WhileStatement,
    ForStatement,
    NamedExpression,
    FunctionType,
    ListType,
    TupleType,
    GenericType,
    IntersectionType,
    UnionType,
    Type,
    GenericsAnnotation,
    Class,
    ListLHS,
    TupleLHS,
    Globals,
    NonLocals,
    AssertStatement,
    PassStatement,
    BreakStatement,
    ContinueStatement,
    ReturnStatement,
    RaiseStatement,
    AssignmentStatement,
    MainPath,
    SubPath,
    ImportStatement,
    Decorator,
    Program,
)


class Parser:
    """
    A recursive descent parser with memoizing feature basically making it a packrat parser.

    It is designed to have the following properties:
    - Results of all paths taken are memoized.
    - A parser function result should not hold values, but references to token elements.

    TODO:
        - Be sure to discard cache after getting program AST
    """

    def __init__(self, tokens, compiler_opts=CompilerOptions()):
        self.tokens = tokens
        self.tokens_length = len(tokens)
        self.cursor = -1
        self.row = 0
        self.column = -1
        self.cache = {}
        self.compiler_opts = compiler_opts
        self.revert_data = (self.cursor, *self.get_line_info())

    def __repr__(self):
        return f"{type(self).__name__}{vars(self)}"

    @staticmethod
    def from_code(code, compiler_opts=CompilerOptions()):
        """
        Creates a parser from code.
        """

        from ..lexer.lexer import Lexer

        tokens = Lexer(code, compiler_opts).lex()

        return Parser(tokens, compiler_opts)

    def get_tokens_from_code(self, code):
        """
        Tokenizes code and stores the generated tokens.
        """

        from ..lexer.lexer import Lexer

        self.tokens = Lexer(code).lex()

    def reset(self):
        """
        Frees resources like cache and tokens and reset fields.
        """

        self.tokens = []
        self.tokens_length = 0
        self.cursor = -1
        self.row = 0
        self.column = -1
        self.cache = {}
        self.revert_data = (self.cursor, *self.get_line_info())

    def get_line_info(self):
        return self.row, self.column

    def revert(self, cursor, row, column):
        """
        Revert parser state
        """

        self.cursor = cursor
        self.row = row
        self.column = column

    def eat_token(self):
        """
        Returns the next token and its index then advances the cursor position
        """

        if self.cursor + 1 < self.tokens_length:
            self.cursor += 1
            token = self.tokens[self.cursor]

            # Update row and column
            self.column = token.column
            self.row = token.row

            return (self.cursor, token)

        return None

    def consume_string(self, string):
        """
        Consumes and checks if next token holds the same data as `string`.
        Advances cursor only when next token matches string.
        """

        if self.cursor + 1 < self.tokens_length:
            token = self.tokens[self.cursor + 1]

            if token.data == string:
                self.cursor += 1
                self.column = token.column
                self.row = token.row

                return self.cursor

        return None

    def backtrackable(parser):
        """
        A decorator that changes the parser state to it's original state just before a parser
        function failed (i.e. returns None).
        """

        @wraps(parser)
        def wrapper(self, *args):
            # Get important parser state before parsing.
            cursor, row, column = self.cursor, *self.get_line_info()

            parser_result = parser(self, *args)

            # Revert parser state
            if parser_result is None:
                self.revert(cursor, row, column)

            return parser_result

        return wrapper

    def memoize(parser):
        """
        A decorator that memoizes the result of a recursive decent parser.
        It also reuses cache if available before running the parser.
        """

        @wraps(parser)
        def wrapper(self, *args):
            # Get info about parser function.
            cursor = self.cursor
            parser_name = parser.__name__

            # Check cache if parser function result is already saved
            cursor_key = self.cache.get(cursor)

            if cursor_key:
                # Catching KeyError here because, None is a valid result value.
                try:
                    result = cursor_key[parser_name]
                    self.cursor = result[1]
                    return result[0]
                except KeyError:
                    pass

            # Otherwise go ahead and parse, then cache result
            parser_result = parser(self, *args)
            skip = self.cursor

            if not cursor_key:
                self.cache[cursor] = {parser_name: (parser_result, skip)}
            else:
                # Catching KeyError here because, None is a valid result value.
                try:
                    cursor_key[parser_name]
                except KeyError:
                    self.cache[cursor][parser_name] = (parser_result, skip)

            return parser_result

        return wrapper

    def consume(self, *args, result_type):
        """
        Checks and consumes the next token if it is of the TokenKinds passed to the function
        """

        payload = self.eat_token()

        if payload and payload[1].kind in args:
            return result_type(payload[0])

        return None

    def register_revert(self):
        """
        Store state to which to revert parser at a later time.
        """

        self.revert_data = (self.cursor, *self.get_line_info())

    def revertable(self, expr):
        """
        Reverts parser state to previously registered revert state.

        This is usually applied to an optional compound sub rule in a production like
        `(',' expr)*` in `expr (',' expr)*`.

        Without this function, the parser can halt after eating token `','` because it cannot
        match `expr` and since the sub rule is optional, the parser won't fail but the already
        eaten `','` will become unavailable to the next parser.
        """
        if not expr:
            self.revert(*self.revert_data)
        else:
            # This is needed for while/for loops, otherwise the revert state will
            # be stuck at the state before the first iteration. We want the parser
            # state to update on each iteration.
            self.register_revert()

        return expr

    @backtrackable
    @memoize
    def newline(self):
        """
        Parses normal string literals
        """

        return self.consume(TokenKind.NEWLINE, result_type=Newline)

    @backtrackable
    @memoize
    def indent(self):
        """
        Parses byte string literals
        """

        return self.consume(TokenKind.INDENT, result_type=Indent)

    @backtrackable
    @memoize
    def dedent(self):
        """
        Parses prefixed string literals
        """

        return self.consume(TokenKind.DEDENT, result_type=Dedent)

    @backtrackable
    @memoize
    def identifier(self):
        """
        Parses identifiers
        """

        return self.consume(TokenKind.IDENTIFIER, result_type=Identifier)

    @backtrackable
    @memoize
    def integer(self):
        """
        Parses integer literals
        """

        return self.consume(
            TokenKind.DEC_INTEGER,
            TokenKind.HEX_INTEGER,
            TokenKind.BIN_INTEGER,
            TokenKind.OCT_INTEGER,
            result_type=Integer,
        )

    @backtrackable
    @memoize
    def float(self):
        """
        Parses floating point literals
        """

        return self.consume(TokenKind.DEC_FLOAT, result_type=Float)

    @backtrackable
    @memoize
    def imag_integer(self):
        """
        Parses imaginary integer literals
        """

        return self.consume(TokenKind.DEC_INTEGER_IMAG, result_type=ImagInteger)

    @backtrackable
    @memoize
    def imag_float(self):
        """
        Parses imaginary float literals
        """

        return self.consume(TokenKind.DEC_FLOAT_IMAG, result_type=ImagFloat)

    @backtrackable
    @memoize
    def string(self):
        """
        Parses normal string literals
        """

        return self.consume(TokenKind.STRING, result_type=String)

    @backtrackable
    @memoize
    def byte_string(self):
        """
        Parses byte string literals
        """

        return self.consume(TokenKind.BYTE_STRING, result_type=ByteString)

    @backtrackable
    @memoize
    def prefixed_string(self):
        """
        Parses prefixed string literals
        """

        return self.consume(TokenKind.PREFIXED_STRING, result_type=PrefixedString)

    @backtrackable
    @memoize
    def power_expr(self):
        """
        rule = '√'? atom_expr ('^' unary_expr | '²')? [right associative]
        """

        root = self.consume_string("√")
        result = self.atom_expr()

        if result is None:
            return None

        self.register_revert()
        if self.revertable(
            (power := self.consume_string("^")) is not None
            and (unary_expr := self.integer()) is not None
        ):
            result = BinaryExpr(result, Operator(power), unary_expr)
        elif (square := self.consume_string("²")) is not None:
            result = UnaryExpr(result, Operator(square))

        if root is not None:
            result = UnaryExpr(result, Operator(root))

        return result

    @backtrackable
    @memoize
    def unary_expr(self):
        """
        rule = ('+' | '-' | '~')* power_expr [right associative]
        """

        unary_ops = []
        while True:
            if (unary_op := self.consume_string("+")) is None:
                if (unary_op := self.consume_string("-")) is None:
                    if (unary_op := self.consume_string("~")) is None:
                        break

            unary_ops.append(Operator(unary_op))

        result = self.power_expr()

        if result is None:
            return None

        for unary_op in reversed(unary_ops):
            result = UnaryExpr(result, unary_op)

        return result

    def binary_expr(self, operand_parser, operators):
        """
        Helper function for parsing left-associative binary expressions.
        NOTE:
            Not bactrackable because it is called once by backtrackable functions
        """

        result = operand_parser()

        while True:
            operator = None
            rem_operator = None

            for i in operators:
                if type(i) == tuple:
                    # Fetch the two elements in tuple.
                    operator = self.consume_string(i[0])
                    rem_operator = self.consume_string(i[1])
                    if operator is not None or rem_operator is not None:
                        break
                else:
                    if (operator := self.consume_string(i)) is not None:
                        break

            if operator is None:
                break

            rhs = operand_parser()

            if rhs is None:
                break

            result = BinaryExpr(result, Operator(operator, rem_operator), rhs)

        return result

    @backtrackable
    @memoize
    def mul_expr(self):
        """
        rule = unary_expr (('*' | '@' | '/' | '%' | '//') unary_expr)* [left associative]
        """

        return self.binary_expr(self.unary_expr, ["*", "@", "/", "%", "//"])

    @backtrackable
    @memoize
    def sum_expr(self):
        """
        rule = mul_expr (('+' | '-') mul_expr)* [left associative]
        """

        return self.binary_expr(self.mul_expr, ["+", "-"])

    @backtrackable
    @memoize
    def shift_expr(self):
        """
        rule = sum_expr (('<<' | '>>') sum_expr)* [left associative]
        """

        return self.binary_expr(self.sum_expr, ["<<", ">>"])

    @backtrackable
    @memoize
    def and_expr(self):
        """
        rule = shift_expr ('&' shift_expr)* [left associative]
        """

        return self.binary_expr(self.shift_expr, ["&"])

    @backtrackable
    @memoize
    def xor_expr(self):
        """
        rule = and_expr ('||' and_expr)* [left associative]
        """

        return self.binary_expr(self.and_expr, ["||"])

    @backtrackable
    @memoize
    def or_expr(self):
        """
        rule = xor_expr ('|' xor_expr)* [left associative]
        """

        return self.binary_expr(self.xor_expr, ["|"])

    @backtrackable
    @memoize
    def comparison_expr(self):
        """
        comparison_op =
            | '<' | '>' | '==' | '>=' | '<=' | '!=' | 'in' | 'not' 'in' | 'is' 'not' | 'is'

        rule = or_expr (comparison_op or_expr)* [left associative]
        """

        return self.binary_expr(
            self.or_expr,
            [
                "<",
                ">",
                "==",
                ">=",
                "<=",
                "!=",
                "in",
                ("not", "in"),
                ("is", "not"),
                "is",
            ],
        )

    @backtrackable
    @memoize
    def not_test(self):
        """
        rule = 'not'* comparison_expr [left associative]
        """

        result = self.comparison_expr()

        while True:
            if (not_op := self.consume_string("not")) is None:
                break

            result = UnaryExpr(result, Operator(not_op))

        return result

    @backtrackable
    @memoize
    def and_test(self):
        """
        rule = not_test ('and' not_test)* [left associative]
        """

        return self.binary_expr(self.not_test, ["and"])

    @backtrackable
    @memoize
    def or_test(self):
        """
        rule = and_test ('or' and_test)* [left associative]
        """

        return self.binary_expr(self.and_test, ["or"])

    @backtrackable
    @memoize
    def test(self):
        """
        rule = or_test ('if' expr 'else' expr)? [left associative]
        """

        result = self.or_test()

        if (
            result is not None
            and (self.consume_string("if") is not None)
            and (cond := self.expr()) is not None
            and self.consume_string("else") is not None
            and (else_expr := self.expr()) is not None
        ):
            result = IfExpr(result, cond, else_expr)

        return result

    @backtrackable
    @memoize
    def named_expr(self):
        """
        rule = identifier ":=" test
        """

        if (
            (identifier := self.identifier()) is not None
            and self.consume_string(":=") is not None
            and (test := self.test()) is not None
        ):
            return NamedExpression(identifier, test)

        return None

    @backtrackable
    @memoize
    def lambda_param(self):
        """
        rule = identifier ('=' expr)?
        """

        identifier = self.identifier()

        if identifier is None:
            return None

        result = FuncParam(identifier)

        self.register_revert()
        if self.revertable(
            self.consume_string("=") is not None and (expr := self.expr()) is not None
        ):
            result.default_value_expr = expr

        return result

    @backtrackable
    @memoize
    def lambda_params(self):
        """
        rule =
            | '(' func_params? ')'
            | lambda_param (',' lambda_param)* (',' '/', lambda_param (',' lambda_param)*)? (',' '*'
              lambda_param (',' lambda_param)*)? (',' '**' lambda_param)? ','?
            | '*' lambda_param (',' lambda_param)* (',' '**' lambda_param)? ','?
            | '**' lambda_param ','?
        """

        cursor, row, column = self.cursor, *self.get_line_info()

        # FIRST ALTERNATIVE
        if (
            self.consume_string("(") is not None
            and (func_params := self.func_params()) is not None
            and self.consume_string(")") is not None
        ):
            return func_params

        # SECOND ALTERNATIVE
        self.revert(cursor, row, column)
        if (param := self.lambda_param()) is not None:
            params = [param]
            positional_only_params = []

            self.register_revert()
            while self.revertable(
                self.consume_string(",") is not None
                and (param := self.lambda_param()) is not None
            ):
                params.append(param)

            self.register_revert()
            if self.revertable(
                self.consume_string(",") is not None
                and self.consume_string("/") is not None
            ):
                positional_only_params = params
                params = []

                self.register_revert()
                while self.revertable(
                    self.consume_string(",") is not None
                    and (param := self.lambda_param()) is not None
                ):
                    params.append(param)

            tuple_rest_param = Null()
            self.register_revert()
            while self.revertable(
                self.consume_string(",") is not None
                and self.consume_string("*") is not None
                and (param := self.lambda_param()) is not None
            ):
                tuple_rest_param = param

            keyword_only_params = []
            if tuple_rest_param:
                self.register_revert()
                while self.revertable(
                    self.consume_string(",") is not None
                    and (param := self.lambda_param()) is not None
                ):
                    keyword_only_params.append(param)

            named_tuple_rest_param = Null()
            self.register_revert()
            if self.revertable(
                self.consume_string(",") is not None
                and self.consume_string("**") is not None
                and (param := self.lambda_param()) is not None
            ):
                named_tuple_rest_param = param

            return FuncParams(
                params, positional_only_params, tuple_rest_param, keyword_only_params, named_tuple_rest_param
            )

        # THIRD ALTERNATIVE
        self.revert(cursor, row, column)
        if (
            self.consume_string("*") is not None
            and (tuple_rest_param := self.lambda_param()) is not None
        ):
            keyword_only_params = []
            if tuple_rest_param:
                self.register_revert()
                while self.revertable(
                    self.consume_string(",") is not None
                    and (param := self.lambda_param()) is not None
                ):
                    keyword_only_params.append(param)

            named_tuple_rest_param = Null()
            self.register_revert()
            if self.revertable(
                self.consume_string(",") is not None
                and self.consume_string("**") is not None
                and (param := self.lambda_param()) is not None
            ):
                named_tuple_rest_param = param

            return FuncParams(
                [], [], tuple_rest_param, keyword_only_params, named_tuple_rest_param
            )

        # FOURTH ALTERNATIVE
        self.revert(cursor, row, column)
        if (
            self.consume_string("**") is not None
            and (named_tuple_rest_param := self.lambda_param()) is not None
        ):
            return FuncParams([], [], Null(), [], named_tuple_rest_param)

        return None

    @backtrackable
    @memoize
    def lambda_expr_def(self):
        """
        rule = 'lambda' lambda_params? ':' expr
        """

        if self.consume_string("lambda") is not None:
            params = params if (params := self.lambda_params()) else Null()

            if (
                self.consume_string(":") is not None
                and (expr := self.expr()) is not None
            ):
                return Function(Null(), [expr], params)

        return None

    @backtrackable
    @memoize
    def expr(self):
        """
        rule = lambda_expr_def | test
        """

        result = self.lambda_expr_def()
        if result is None:
            result = self.test()

        return result

    @backtrackable
    @memoize
    def exprs(self):
        """
        rule = expr (',' expr)* ','?
        """

        result = self.expr()

        if result is None:
            return None

        exprs = [result]

        self.register_revert()
        while self.revertable(
            self.consume_string(",") is not None and (expr := self.expr()) is not None
        ):
            exprs.append(expr)

        self.consume_string(",")

        return exprs if len(exprs) > 1 else result

    @backtrackable
    @memoize
    def rest_expr(self):
        """
        rule = ('*' | '**')? expr
        """

        is_tuple_rest = None

        if self.consume_string("*"):
            is_tuple_rest = True
        elif self.consume_string("**"):
            is_tuple_rest = False

        result = self.expr()

        if result is None:
            return None

        if is_tuple_rest is True:
            result = TupleRestExpr(result)
        elif is_tuple_rest is False:
            result = NamedTupleRestExpr(result)

        return result

    @backtrackable
    @memoize
    def rest_exprs(self):
        """
        rule = rest_expr (',' rest_expr)* ','?
        """

        result = self.rest_expr()

        if result is None:
            return None

        exprs = [result]

        self.register_revert()
        while self.revertable(
            self.consume_string(",") is not None
            and (rest_expr := self.rest_expr()) is not None
        ):
            exprs.append(rest_expr)

        self.consume_string(",")

        return exprs if len(exprs) > 1 else result

    @backtrackable
    @memoize
    def lambda_block_def(self):
        """
        rule = 'lambda' lambda_params? ':' indent statements dedent
        """

        if self.consume_string("lambda") is not None:
            params = params if (params := self.lambda_params()) else Null()

            if self.consume_string(":") is not None and self.indent() is not None:
                statements = self.statements() or []

                # There should be at least an expression.
                # TODO: Raise error if block has dedent but no expression.
                if self.dedent() is not None and len(expr) > 0:
                    return Function(Null(), statements, params)

        return None

    @backtrackable
    @memoize
    def indentable_expr(self):
        """
        rule =
            | lambda_block_def
            | expr
        """

        result = self.lambda_block_def()
        if result is None:
            result = self.expr()

        return result

    @backtrackable
    @memoize
    def indentable_exprs(self):
        """
        rule = indentable_expr (',' indentable_expr)* ','?
        """

        result = self.indentable_expr()

        if result is None:
            return None

        exprs = [result]

        self.register_revert()
        while self.revertable(
            self.consume_string(",") is not None
            and (indentable_expr := self.indentable_expr()) is not None
        ):
            exprs.append(indentable_expr)

        self.consume_string(",")

        return exprs if len(exprs) > 1 else result

    @backtrackable
    @memoize
    def rest_indentable_expr(self):
        """
        rule = ('*' | '**')? indentable_expr
        """

        is_tuple_rest = None

        if self.consume_string("*"):
            is_tuple_rest = True
        elif self.consume_string("**"):
            is_tuple_rest = False

        result = self.indentable_expr()

        if result is None:
            return None

        if is_tuple_rest is True:
            result = TupleRestExpr(result)
        elif is_tuple_rest is False:
            result = NamedTupleRestExpr(result)

        return result

    @backtrackable
    @memoize
    def rest_indentable_exprs(self):
        """
        rule = rest_indentable_expr (',' rest_indentable_expr)* ','?
        """

        result = self.rest_indentable_expr()

        if result is None:
            return None

        exprs = [result]

        self.register_revert()
        while self.revertable(
            self.consume_string(",") is not None
            and (rest_expr := self.rest_indentable_expr()) is not None
        ):
            exprs.append(rest_expr)

        self.consume_string(",")

        return exprs if len(exprs) > 1 else result

    @backtrackable
    @memoize
    def named_expr_or_test(self):
        """
        rule =
            | named_expr
            | test
        """

        if (named_expr := self.named_expr()) is not None:
            return named_expr

        if (test := self.test()) is not None:
            return test

        return None

    @backtrackable
    @memoize
    def comprehension_if(self):
        """
        rule = 'if' (named_expr | indentable_exprs)
        """

        if self.consume_string("if") is not None:
            if (named_expr := self.indentable_expr()) is not None:
                return named_expr

            if (indentable_expr := self.indentable_expr()) is not None:
                return indentable_expr

        return None

    @backtrackable
    @memoize
    def sync_comprehension_for(self):
        """
        rule = 'for' for_lhs 'in' indentable_expr comprehension_if?
        """

        result = None

        if (
            self.consume_string("for") is not None
            and (var_expr := self.for_lhs()) is not None
            and self.consume_string("in") is not None
            and (iterable_expr := self.indentable_expr()) is not None
        ):
            result = Comprehension(None, var_expr, iterable_expr)

            if (comprehension_if := self.comprehension_if()) :
                result.for_if_expr = comprehension_if

        return result

    @backtrackable
    @memoize
    def comprehension_for(self):
        """
        rule = 'async'? sync_comprehension_for ('async'? sync_comprehension_for)*
        """

        is_async = self.consume_string("async") is not None
        result = self.sync_comprehension_for()

        if result is None:
            return None

        result.is_async = is_async

        temp_result = result
        while True:
            self.register_revert()
            is_async = self.revertable(self.consume_string("async") is None)
            if (nested_comprehension := self.sync_comprehension_for()) is not None:
                temp_result.nested_comprehension = nested_comprehension
                temp_result.is_async = is_async
                temp_result = temp_result.nested_comprehension
                continue

            break

        return result

    @backtrackable
    @memoize
    def yield_argument(self):
        """
        rule =
            | 'from' indentable_expr
            | indentable_exprs
        """

        cursor, row, column = self.cursor, *self.get_line_info()

        # FIRST ALTERNATIVE
        if (
            self.consume_string("from") is not None
            and (indentable_expr := self.indentable_expr()) is not None
        ):
            return Yield([indentable_expr], is_yield_from=True)

        # SECOND ALTERNATIVE
        self.revert(cursor, row, column)
        indentable_exprs = self.indentable_exprs()

        return Yield(indentable_exprs) if indentable_exprs is not None else None

    @backtrackable
    @memoize
    def yield_expr(self):
        """
        rule = 'yield' yield_argument?
        """

        result = None

        if (yield_ := self.consume_string("yield")) is not None:
            if (yield_argument := self.yield_argument()) is not None:
                return yield_argument

            result = Yield([])

        return result

    @backtrackable
    @memoize
    def expr_suite(self):
        """
        rule =
            | rest_indentable_expr
            | indent rest_indentable_expr dedent
        """

        # FIRST ALTERNATIVE
        if (rest_indentable_expr := self.rest_indentable_expr()) is not None:
            return rest_indentable_expr

        # SECOND ALTERNATIVE
        if (
            self.indent() is not None
            and (rest_indentable_expr := self.rest_indentable_expr()) is not None
            and self.dedent() is not None
        ):
            return rest_indentable_expr

        return None

    @backtrackable
    @memoize
    def indentable_exprs_or_comprehension(self):
        """
        rule =
            | (named_expr | rest_indentable_expr) comprehension_for
            | (named_expr | rest_indentable_exprs)
        """

        cursor, row, column = self.cursor, *self.get_line_info()

        if (named_expr := self.named_expr()) is not None:
            if (comprehension_for := self.comprehension_for()) is not None:
                comprehension_for.expr = named_expr
                return comprehension_for

            return named_expr

        self.revert(cursor, row, column)
        if (rest_indentable_expr := self.rest_indentable_expr()) is not None:
            if (comprehension_for := self.comprehension_for()) is not None:
                comprehension_for.expr = rest_indentable_expr
                return comprehension_for

        self.revert(cursor, row, column)
        if (rest_indentable_exprs := self.rest_indentable_exprs()) is not None:
            return rest_indentable_exprs

        return None

    @backtrackable
    @memoize
    def dict_or_set(self):
        """
        rule =
            | test ':' expr_suite comprehension_for
            | test ':' expr_suite (',' test ':' expr_suite)* ','?
            | indentable_exprs_or_comprehension
        """

        cursor, row, column = self.cursor, *self.get_line_info()
